force-app/main/default/objects/FEC_Hold_Case__c/FEC_Hold_Case__c.object-meta.xml
<CustomObject>
    <description>Là thư viện NFU Code phục vụ cho quy trình Hold Case</description>
    <label>Hold Case</label>
    <nameField>
        <displayFormat>NFU-{0}</displayFormat>
        <label>NFU Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hold Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>