force-app/main/default/objects/FEC_Hold_Case__c/fields/FEC_NFU_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_NFU_Code__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Mã NFU</description>
    <externalId>true</externalId>
    <label>NFU Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>