force-app/main/default/objects/FEC_Hold_Case__c/fields/FEC_NFU_Code_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_NFU_Code_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Trạng thái mã NFU</description>
    <inlineHelpText>Testing</inlineHelpText>
    <label>NFU Code Status</label>
    <type>Checkbox</type>
</CustomField>