force-app/main/default/objects/FEC_Hold_Case__c/fields/FEC_NFU_Duration__c.field-meta.xml
<CustomField>
    <fullName>FEC_NFU_Duration__c</fullName>
    <description>Thời gian mark NFU tương ứng với NFU Code</description>
    <label>NFU Duration</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>