force-app/main/default/objects/FEC_Hold_Case__c/fields/FEC_NFU_Reason_EN__c.field-meta.xml
<CustomField>
    <fullName>FEC_NFU_Reason_EN__c</fullName>
    <description>Lý do NFU (Tiếng Anh)</description>
    <label>NFU Reason EN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>