force-app/main/default/objects/FEC_Hold_Case__c/fields/FEC_NFU_Reason_VN__c.field-meta.xml
<CustomField>
    <fullName>FEC_NFU_Reason_VN__c</fullName>
    <description>Lý do NFU (Tiếng Việt)</description>
    <label>NFU Reason VN</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>