force-app/main/default/objects/FEC_Hold_Case__c/listViews/NFU_List.listView-meta.xml
<ListView>
    <fullName>NFU_List</fullName>
    <columns>FEC_NFU_Code__c</columns>
    <columns>NAME</columns>
    <columns>FEC_NFU_Reason_VN__c</columns>
    <columns>FEC_NFU_Reason_EN__c</columns>
    <columns>FEC_NFU_Duration__c</columns>
    <columns>FEC_NFU_Code_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FEC_NFU_Duration__c</field>
        <operation>lessThan</operation>
        <value>46</value>
    </filters>
    <label>NFU List</label>
</ListView>